# amplifier-bundle-attractor-wiki

./: AGENTS.md  CAPABILITIES.md  CHANGELOG.md  KNOWN_LIMITATIONS.md  README.md  UPSTREAM-ISSUE-context-include.md  bundle.md  drop_in_demo.py  drop_in_runner.py  probe_context.py  probe_load.py  prove_bundle.py  prove_orient.py  prove_sentinel.py  prove_structure.py  prove_tool_consumer.py  pyproject.toml  review_queue.py  run_ingest.py  run_review.py  run_seam.py  run_seam2.py  smoke_fail_loud.py  wiki-agent-anthropic.yaml
behaviors/: attractor-wiki.yaml
context/: attractor-wiki-awareness.md  using-attractor-wiki.md
examples/: drop_in_demo.py  drop_in_runner.py  prove_bundle.py  prove_tool_consumer.py
modules/tool-wiki/: pyproject.toml
modules/tool-wiki/amplifier_module_tool_wiki/: __init__.py
pipelines/: wiki-ingest.dot
wiki_attractor/: __init__.py  __main__.py  api.py  apply_resolutions_queue.py  cli.py  registry.py  runner.py
wiki_attractor/assets/: classify_source.py  publish.sh  verify.sh
wiki_attractor/pipelines/: README.md  apply-resolutions.dot  full-pass.dot  ingest.dot  init.dot  lint.dot  review.dot  wiki-publish.dot  wiki-query.dot
wiki_attractor/profiles/: wiki-agent-anthropic.yaml
wiki_attractor/profiles/context/: wiki-agent-base-context.md
wiki_attractor/scripts/: enforce_speaker_attribution.py
