[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiki-attractor"
version = "0.3.0"
description = "Run amplifier-bundle-llm-wiki workflows as attractor pipelines (thin click wrapper over an AmplifierSession runner)."
requires-python = ">=3.11"
# Only the wrapper's own hard dependency is declared. The heavy runtime --
# amplifier_foundation + amplifier_module_loop_pipeline -- is PROVIDED BY THE HOST
# amplifier install (the tool venv this is installed into). It is intentionally not
# declared as a resolvable dependency because it is distributed via the amplifier
# toolchain, not PyPI. Install editable into the amplifier tool venv, or for a
# standalone install add it with: uv tool install ... --with amplifier-foundation
dependencies = ["click>=8.1"]

[project.scripts]
wiki-attractor = "wiki_attractor.cli:main"

[tool.hatch.build.targets.wheel]
# packages= ships ALL files under wiki_attractor/ (incl. pipelines/*.dot, profiles/*.yaml,
# assets/*.sh) — not just .py. Do NOT add a force-include for those subdirs: it duplicates
# what packages= already ships and makes `uv tool install` fail on a wheel-path collision
# (the host's editable install never builds a wheel, so it hid this — the DTU caught it).
packages = ["wiki_attractor"]
