[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-tool-wiki"
version = "0.1.0"
description = "Amplifier tool module: exposes the wiki tools as mountable tools in an AmplifierSession (see CAPABILITIES.md for the authoritative list)."
requires-python = ">=3.11"
license = { text = "MIT" }
# wiki-attractor is a PEER dependency — the bundle root's pyproject.toml declares it,
# and Bundle.prepare() installs the bundle package (wiki-attractor) BEFORE activating
# modules. Listing it here causes `uv pip install --no-sources` to fail trying to
# resolve it from PyPI. Same rule as amplifier-core: peer deps are NOT listed here.
# amplifier-core is also a peer dependency provided by the host amplifier install.
dependencies = []

[project.entry-points."amplifier.modules"]
tool-wiki = "amplifier_module_tool_wiki:mount"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_wiki"]
